--- a/backend/query/Cargo.toml
+++ b/backend/query/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { version = "1.25.0", features = ["full"] }
 tracing = { version = "0.1.37", features = ["attributes"] }
 url = { version = "2.2.2" }
 uuid = { version = "1.3.0", features = ["v4", "serde"] }
+uchat_domain ={ path = "../../shared/domain", features = ["query"]}
 
 [dependencies.diesel]
 features = [
