Fixed some bugs and implemented User-facing Error Messages [User Registration Page Complete]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ members = [
   "frontend",
   "shared/cookie",
   "shared/domain",
-  "tools/project-init", "shared/endpoint",
+  "shared/endpoint",
+  "tools/project-init",
 ]
