--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ API_BIND= "127.0.0.1:8070"
 
 # development only
 DATABASE_URL = postgres://postgres:2580@localhost/uchat
-TEST_DATABASE_URL = postgres://iz:2580@localhost/uchat_test
+TEST_DATABASE_URL = postgres://postgres:2580@localhost/uchat_test
 FRONTEND_URL = "http://127.0.0.1:8080"
