--- a/shared/domain/Cargo.toml
+++ b/shared/domain/Cargo.toml
@@ -14,7 +14,7 @@ thiserror = "1"
 uuid = { version = "1.3.0", features = ["v4", "serde", "js"] }
 
 # backend
-diesel-derive-newtype = {version = "2.0.0-rc.0", optional = true}
+diesel-derive-newtype = {version = "2.0.0", optional = true}
 
 [dependencies.diesel]  
 version = "2.0.3"
