--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ debug/
 target/
 usercontent/
 
+
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 
@@ -13,3 +14,5 @@ usercontent/
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+.env
