--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 debug/
 target/
 usercontent/
+node_modules
 
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
